# mbed-os-patch

targets/: targets.json
targets/TARGET_STM/: SerWireOpt.cpp  SerWireOpt.hpp
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xG/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F407xG/TARGET_DISCO_F407VG/: CMakeLists.txt  PeripheralPins.c  PinNames.h
targets/TARGET_STM/TARGET_STM32L4/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/NUCLEO_L4PICO/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/TARGET_NUCLEO_L4PICO/: CMakeLists.txt  PeripheralPins.c  PinNames.h
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/TOOLCHAIN_ARM/: startup_stm32l4s7xx.S
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/TOOLCHAIN_GCC_ARM/: startup_stm32l4s7xx.S
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4S7xI/TOOLCHAIN_IAR/: startup_stm32l4s7xx.S
